# react

./: .babelrc  .dockerignore  .eslintcache  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .markdownlint-cli2.cjs  .markdownlint-cli2.mjs  .nowignore  .npmignore  .npmrc  .nvmrc  .prettierignore  .stylelintignore  .stylelintrc  .travis.yml  .yarnrc  .yarnrc.yml  41-195e4bf2eefa42621fef.js  41-195e4bf2eefa42621fef.js.map  41-3e6c49999f9aeafc10bc.js  41-3e6c49999f9aeafc10bc.js.map  41-7e879efcacb5ff4310d9.js  41-7e879efcacb5ff4310d9.js.map  49-0f4e92e587c7bd3f06b9.js  49-0f4e92e587c7bd3f06b9.js.map  AGENTS.md  CHANGELOG.md  CLEANUP_REPORT.md  CODEOWNERS  COMPLIANCE_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTOR_GUIDELINES_COMPLIANCE.md  Dockerfile  FINAL_VERIFICATION.md  PAGELAYOUT_OVERFLOW_FIX.md  PLAN.md  README.md  app-18e8b75363392e177a70.js  (+548 more)
.changeset/: action-list-description-a11y.md  action-list-group-heading-leading-visual.md  action-list-group-heading-trailing-action.md  action-list-groups-a11y.md  action-list-item-gap.md  action-list-selection-a11y.md  action-list-small-size.md  actionbar-flicker-fix.md  actionbar-more-items-label.md  actionbar-text-button.md  actionlist-a11y-fixes.md  actionlist-disabled-items.md  actionlist-fix-selection-rendering.md  actionlist-heading-span-fix.md  actionlist-keyboard-a11y.md  actionlist-mixed-descriptions.md  actionlist-react-compiler.md  actionlist-variant-start-end-vertical-inset.md  (+2313 more)
changes/: Cargo.toml  README.md
changes/src/: changeset.rs  main.rs  publish.rs  release.rs  versioning.rs  workspace.rs
lib/: Box.js  (+103 more)
(+4469 files in other folders)
